Use bundled packages and update CI for publishing (replaces #119) (#153)
* Use bundled packages and update CI for publishing

Copy of work done by @jastang in
https://github.com/crossplane-contrib/provider-bitbucket-server/commit/db0bdfdf182ef5292017826d0338a5d7f38219ed#diff-944291df2c9c06359d37cc8833d182d705c9e8c3108e7cfe132d61a06e9133dd

Signed-off-by: Carl Henrik Lunde <chlunde@ifi.uio.no>

* xpkg - merge controller images and attempt to fix e2e

Signed-off-by: Carl Henrik Lunde <chlunde@ifi.uio.no>

* Update UP_VERSION

Co-authored-by: Jason Tang <ysjason.tang@gmail.com>
Signed-off-by: Duologic <jeroen@simplistic.be>
Signed-off-by: Javier Palomo <javier.palomo@grafana.com>

---------

Signed-off-by: Carl Henrik Lunde <chlunde@ifi.uio.no>
Signed-off-by: Duologic <jeroen@simplistic.be>
Signed-off-by: Javier Palomo <javier.palomo@grafana.com>
Co-authored-by: Carl Henrik Lunde <chlunde@ifi.uio.no>
Co-authored-by: Jeroen Op 't Eynde <jeroen@simplistic.be>
Co-authored-by: Jason Tang <ysjason.tang@gmail.com>

--- a/package/crossplane.yaml
+++ b/package/crossplane.yaml
@@ -1,4 +1,4 @@
-apiVersion: meta.pkg.crossplane.io/v1alpha1
+apiVersion: meta.pkg.crossplane.io/v1
 kind: Provider
 metadata:
   name: provider-sql
@@ -29,6 +29,3 @@ metadata:
     friendly-kind-name.meta.crossplane.io/grant.postgresql.sql.crossplane.io: Grant
     friendly-kind-name.meta.crossplane.io/role.postgresql.sql.crossplane.io: Role
     friendly-kind-name.meta.crossplane.io/user.mysql.sql.crossplane.io: User
-spec:
-  controller:
-    image: crossplane/provider-sql-controller:VERSION
